Add in-shuffle variants for primitive array interleaving. Requires enable-preview flag.